--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+  id "org.standardout.versioneye" version "1.3.0"
+}
+
 apply plugin: 'groovy'
 apply plugin: 'eclipse'
 apply plugin: 'maven'
@@ -52,6 +56,8 @@ dependencies {
   testRuntime 'ch.qos.logback:logback-core:1.1.6'
   testRuntime 'ch.qos.logback:logback-classic:1.1.6'
 }
+
+tasks.check.dependsOn('versionEyeSecurityAndLicenseCheck')
 
 /*
  * Packaging and publishing
