--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
 plugins {
   id 'groovy'
   id 'maven'
-  id "org.standardout.versioneye" version "1.3.0"
+//  id "org.standardout.versioneye" version "1.3.0"
 }
 
 apply plugin: 'org.standardout.eclipseconfig'
@@ -66,7 +66,7 @@ dependencies {
   testRuntime 'ch.qos.logback:logback-classic:1.1.6'
 }
 
-tasks.check.dependsOn('versionEyeSecurityAndLicenseCheck')
+//tasks.check.dependsOn('versionEyeSecurityAndLicenseCheck')
 
 /*
  * Packaging and publishing
