--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
 
 group = 'to.wetransform'
-version = '1.0.0'
+version = '1.1.0-SNAPSHOT'
 
 project.ext {
   haleVersion = '3.0.0'
