refactor: include empty alignment in generated projects
Include empty alignment in generated projects to make handling easier
for any downstream processes that manipulate the alignment.

Relates to ING-1065

--- a/build.gradle
+++ b/build.gradle
@@ -45,13 +45,16 @@ project.ext {
 
 dependencies {
   compile 'org.slf4j:slf4j-api:1.7.12'
-	
+
   // core
   compile 'eu.esdihumboldt.unpuzzled:org.eclipse.equinox.nonosgi.registry:1.0.0'
   compile "eu.esdihumboldt.hale:eu.esdihumboldt.hale.common.core:$haleVersion"
   
   // schema
   compile "eu.esdihumboldt.hale:eu.esdihumboldt.hale.common.schema:$haleVersion"
+
+  // alignment
+  compile "eu.esdihumboldt.hale:eu.esdihumboldt.hale.common.align:$haleVersion"
 	
   // resources
   /*
