--- a/build.gradle
+++ b/build.gradle
@@ -1,77 +1,60 @@
-buildscript {
-  repositories {
-    jcenter()
-  }
-  dependencies {
-    classpath 'org.standardout:gradle-eclipseconfig:1.1.0'
-  }
-}
-
 plugins {
+  id 'java-library'
+  id 'maven-publish'
   id 'groovy'
-  id 'maven'
-//  id "org.standardout.versioneye" version "1.3.0"
+  id 'org.standardout.eclipseconfig' version '1.1.0'
+  id 'to.wetransform.semantic-release-version' version '2.1.1'
 }
-
-apply plugin: 'org.standardout.eclipseconfig'
 
 repositories {
-  // these need to before jcenter/MavenCentral for retrieving JAI
+  maven { // wetransform (HALE and Eclipse dependencies)
+    url 'https://artifactory.wetransform.to/artifactory/local'
+  }
+
+  // these need to before MavenCentral for retrieving JAI
+  maven { // Geotools
+    url 'https://repo.osgeo.org/repository/release/'
+  }
+
   maven {
     url 'https://artifactory.wetransform.to/artifactory/ext-release-local'
   }
-  
-  jcenter()
-  maven { // wetransform release repository (HALE releases and Eclipse dependencies)
-    url 'https://artifactory.wetransform.to/artifactory/libs-release-local'
-  }
-  maven { // wetransform snapshot repository (HALE snapshots)
-    url 'https://artifactory.wetransform.to/artifactory/libs-snapshot-local'
-  }
-  maven { // Geotools
-    url 'http://download.osgeo.org/webdav/geotools/'
+
+  mavenCentral()
+}
+
+java {
+  toolchain {
+    languageVersion = JavaLanguageVersion.of(17)
   }
 }
 
-sourceCompatibility = '1.8'
-targetCompatibility = '1.8'
-
 group = 'to.wetransform'
-version = '2.0.0-SNAPSHOT'
 
 project.ext {
-  haleVersion = '3.5.0'
+  haleVersion = '5.2.0'
 }
 
 dependencies {
-  compile 'org.slf4j:slf4j-api:1.7.12'
+  implementation 'org.slf4j:slf4j-api:1.7.36'
 
   // core
-  compile 'eu.esdihumboldt.unpuzzled:org.eclipse.equinox.nonosgi.registry:1.0.0'
-  compile "eu.esdihumboldt.hale:eu.esdihumboldt.hale.common.core:$haleVersion"
-  
+  implementation 'eu.esdihumboldt.unpuzzled:org.eclipse.equinox.nonosgi.registry:1.0.0'
+  implementation "eu.esdihumboldt.hale:eu.esdihumboldt.hale.common.core:$haleVersion"
+
   // schema
-  compile "eu.esdihumboldt.hale:eu.esdihumboldt.hale.common.schema:$haleVersion"
+  implementation "eu.esdihumboldt.hale:eu.esdihumboldt.hale.common.schema:$haleVersion"
 
   // alignment
-  compile "eu.esdihumboldt.hale:eu.esdihumboldt.hale.common.align:$haleVersion"
-	
-  // resources
-  /*
-  compile(group: 'eu.esdihumboldt.hale', name: 'eu.esdihumboldt.util.resource', version: haleVersion)
-  compile(group: 'eu.esdihumboldt.hale', name: 'eu.esdihumboldt.util.resource.schemas.opengis.net', version: '2015.10.27')
-  compile(group: 'eu.esdihumboldt.hale', name: 'eu.esdihumboldt.util.resource.schemas.inspire', version: '2015.10.27')
-	*/
-	
+  implementation "eu.esdihumboldt.hale:eu.esdihumboldt.hale.common.align:$haleVersion"
+
   // testing
-  testCompile 'junit:junit:4.12'
+  testImplementation 'junit:junit:4.12'
 
   // logging
-  testRuntime 'ch.qos.logback:logback-core:1.1.6'
-  testRuntime 'ch.qos.logback:logback-classic:1.1.6'
+  testRuntimeOnly 'ch.qos.logback:logback-core:1.2.12'
+  testRuntimeOnly 'ch.qos.logback:logback-classic:1.2.12'
 }
-
-//tasks.check.dependsOn('versionEyeSecurityAndLicenseCheck')
 
 /*
  * Packaging and publishing
@@ -80,7 +63,7 @@ dependencies {
 // package groovydoc into a jar file
 task packageJavadoc(type: Jar, dependsOn: 'groovydoc') {
   from groovydoc.destinationDir
-  classifier = 'javadoc'
+  archiveClassifier = 'javadoc'
 }
 
 // groovydoc task work-around
@@ -97,30 +80,27 @@ dependencies {
 // package source into a jar file
 task packageSources(type: Jar) {
   from sourceSets.main.allSource
-  classifier = 'sources'
+  archiveClassifier = 'sources'
 }
 
-// define artifacts for upload
-artifacts {
-  archives jar
-  archives packageJavadoc
-  archives packageSources
-}
+publishing {
+  publications {
+    mavenJava(MavenPublication) {
+      from components.java
+      artifact packageSources
+      artifact packageJavadoc
+    }
+  }
 
-uploadArchives {
   repositories {
-    mavenDeployer {
-      
-      // upload to wetransform artifactory
-      repository(url: 'https://artifactory.wetransform.to/artifactory/libs-release-local') {
-        authentication(userName: project.hasProperty('wetfArtifactoryUser') ? wetfArtifactoryUser : '',
-          password: project.hasProperty('wetfArtifactoryPassword') ? wetfArtifactoryPassword : '')
+    maven {
+      url = project.version.endsWith('-SNAPSHOT') ?
+        'https://artifactory.wetransform.to/artifactory/private-snapshot-local' :
+        'https://artifactory.wetransform.to/artifactory/private-release-local'
+      credentials {
+        username project.hasProperty('wetfArtifactoryUser') ? wetfArtifactoryUser : ''
+        password project.hasProperty('wetfArtifactoryPassword') ? wetfArtifactoryPassword : ''
       }
-      snapshotRepository(url: 'https://artifactory.wetransform.to/artifactory/libs-snapshot-local') {
-        authentication(userName: project.hasProperty('wetfArtifactoryUser') ? wetfArtifactoryUser : '',
-          password: project.hasProperty('wetfArtifactoryPassword') ? wetfArtifactoryPassword : '')
-      }
-
     }
   }
 }
@@ -135,6 +115,7 @@ configurations.all {
 }
 
 // Gradle wrapper
-task wrapper(type: Wrapper) {
-  gradleVersion = '4.9'
+tasks.wrapper {
+  distributionType = Wrapper.DistributionType.ALL
+  gradleVersion = '8.8'
 }
